manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guchub-__app-id__
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guchub-__app-id__
  template:
    metadata:
      labels:
        app: guchub-__app-id__
    spec:
      containers:
        - name: guchub 
          image: reviewappregistery.azurecr.io/guchub
          ports:
          - containerPort: 80
