manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: guchub-__app-id__
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: guchub-__app-id__
