manifests/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: guchub-ingress10
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - guchub.ahmedlhanafy.com
    secretName: tls-secret-12
  rules:
  - host: guchub.ahmedlhanafy.com
    http:
      paths:
      - backend:
          serviceName: guchub10
          servicePort: 80
        path: /(.*)
